samples/_failures_safe/1761643308_b6875b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0dedf08.c: In function ‘main’:
./samples/SAFE/__tmp_f0dedf08.c:163:12: error: missing terminating " character
  163 |     printf("Goodbye
      |            ^~~~~~~~
./samples/SAFE/__tmp_f0dedf08.c:163:5: error: expected expression at end of input
  163 |     printf("Goodbye
      |     ^~~~~~
./samples/SAFE/__tmp_f0dedf08.c:163:5: error: expected declaration or statement at end of input
